# ai-eu-trade-accelerator

./: README.md
beatrice/: .env.example  .gitignore  README.md  pyproject.toml
beatrice/apps/guidance-api/: pyproject.toml
beatrice/apps/guidance-explorer/: package-lock.json  package.json  tailwind.config.ts
beatrice/config/: litellm.yaml
beatrice/docs/: index.md  legal-comparison.md
beatrice/docs/infographic/: 1-inforgraphic-evidence-pack-prompt.txt  2-infographic-generator-prompt.txt
beatrice/scripts/: extract_guidance_from_text.py  extract_law_propositions_from_text.py
judit/: .cursorignore  .env.example  .gitignore  .prettierignore  README.md  justfile  main.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json
judit/apps/api/: pyproject.toml
judit/apps/static-site/: README.md
judit/apps/web/: .env.local.example  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
judit/config/: litellm.yaml
judit/data/demo/: example_case.json  realistic_case.json  single_jurisdiction_case.json
judit/docs/: index.md
judit/docs/architecture/: pipeline-overview.md  system-overview.md
judit/docs/assets/: generated-assets.md
judit/docs/canonical/: audiences.md  project-state.md  roadmap.md  visuals.md
judit/docs/decisions/: adr-0001-github.md  adr-0002-litellm.md  adr-0003-d2.md  adr-0004-marp.md  adr-0005-source-first-ingestion.md  adr-0006-proposition-level-comparison-unit.md  adr-0007-export-bundle-renderer-boundary.md  adr-0008-litellm-sidecar-gateway.md  adr-0009-source-provenance-version-awareness.md  adr-0010-human-review-in-core-workflow.md  adr-0011-v1-read-only-workbench-ui.md  adr-0012-defer-evaluation-layer-beyond-v1.md  adr-0013-traceable-pipeline-run-artifacts.md  adr-0014-proposition-first-architecture.md  adr-0019-model-usage-strategy.md  (+4 more)
judit/examples/: corpus_equine_full_candidate_universe.json  corpus_equine_law.json  corpus_equine_law_fixtures.json  corpus_equine_movement_import_trade_v0_1.json  corpus_equine_passport_devolved_v0_1.json  corpus_equine_passport_england_ukwide_v0_1.json  corpus_equine_passport_eu_2015_262_v0_1.json  corpus_equine_passport_identification_v0_1.json  equine_corpus_fixture_case.json  equine_full_21_legislation_case.json  equine_full_candidate_universe_case.json  equine_law_corpus_case.json  equine_movement_import_trade_case.json  equine_passport_devolved_case.json  equine_passport_england_ukwide_case.json  equine_passport_eu_2015_262_case.json  equine_passport_identification_case.json  equine_source_universe.json  horse_import_corpus_case.json  pilot_reg_2016_429_art109_equine.json
judit/scripts/: build_infographic_prompt_context.sh  render_decks.sh  render_diagrams.sh  render_infographics.sh  run-art109-equine-pilot.sh
(+126 files in other folders)
