[project]
name = "beatrice-guidance-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.35.0",
    "beatrice-guidance",
    "beatrice-matching",
    "bert-score>=0.3",
    "beatrice-llm",
    "beatrice-domain",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beatrice_guidance_api"]
