[project]
name = "judit-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.136.1",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.8.0",
  "uvicorn[standard]>=0.35.0",
  "judit-domain",
  "judit-exporters",
  "judit-llm",
  "judit-pipeline",
  "judit-storage",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/judit_api"]
